--- a/views/room.ejs
+++ b/views/room.ejs
@@ -7,9 +7,10 @@
   <script>
     const ROOM_ID = "<%= roomId %>"
   </script>
-  <script defer src="https://unpkg.com/peerjs@1.2.0/dist/peerjs.min.js"></script>
+  <script defer src="https://cdnjs.cloudflare.com/ajax/libs/peerjs/1.3.1/peerjs.min.js"></script>
   <script src="/socket.io/socket.io.js" defer></script>
   <script src="script.js" defer></script>
+  <script src = "peer.js" defer></script>
   <title>Document</title>
   <style>
     #video-grid {
