--- a/views/room.ejs
+++ b/views/room.ejs
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,27 +12,40 @@
   <script defer src="https://cdnjs.cloudflare.com/ajax/libs/peerjs/1.3.1/peerjs.min.js"></script>
   <script src="/socket.io/socket.io.js" defer></script>
   <script src="script.js" defer></script>
-  <script src = "peer.js" defer></script>
+  <script src="peer.js" defer></script>
   <title>Document</title>
   <style>
     #video-grid {
       display: grid;
       grid-template-columns: repeat(auto-fill, 300px);
       grid-auto-rows: 300px;
+      grid-auto-columns: 300px;
     }
-    
+
     video {
       width: 100%;
       height: 100%;
-      object-fit: cover;
-      border-bottom: 1px solid black;
-      border-top: 1px solid black;
-      border-left : 1px solid black;
-      border-right: 1px solid black;
+      object-fit:cover;
+      border-bottom: 5px solid black;
+      border-top: 5px solid black;
+      border-left: 5px solid black;
+      border-right: 5px solid black;
+    }
+
+    @media screen and (max-width: 800px) {
+      #video-grid {
+        display: grid;
+        grid-template-columns: repeat(auto-fill, 100px);
+        grid-auto-rows: 100px;
+        padding-right: 5px;
+        padding-left: 5px;
+      }
     }
   </style>
 </head>
+
 <body>
   <div id="video-grid"></div>
 </body>
+
 </html>
