--- a/views/room.ejs
+++ b/views/room.ejs
@@ -12,7 +12,7 @@
   <script defer src="https://cdnjs.cloudflare.com/ajax/libs/peerjs/1.3.1/peerjs.min.js"></script>
   <script src="/socket.io/socket.io.js" defer></script>
   <script src="script.js" defer></script>
-  <script src="peer.js" defer></script>
+  <!-- <script src="peer.js" defer></script> -->
   <title>Document</title>
   <style>
     #video-grid {
