--- a/views/room.ejs
+++ b/views/room.ejs
@@ -2,50 +2,24 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Sai's Room</title>
-  <script>
-    const ROOM_ID = "<%= roomId %>"
-  </script>
-  <script defer src="https://cdnjs.cloudflare.com/ajax/libs/peerjs/1.3.1/peerjs.min.js"></script>
-  <script src="/socket.io/socket.io.js" defer></script>
-  <script src="script.js" defer></script>
-  <!-- <script src="peer.js" defer></script> -->
-  <title>Document</title>
-  <style>
-    #video-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fill, 300px);
-      grid-auto-rows: 300px;
-      grid-auto-columns: 300px;
-    }
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Sai's Room</title>
+    <script>
+        const ROOM_ID = "<%= roomId %>"
+    </script>
+    <script defer src="https://cdnjs.cloudflare.com/ajax/libs/peerjs/1.3.1/peerjs.min.js"></script>
+    <script src="/socket.io/socket.io.js" defer></script>
+    <script src="script.js" defer></script>
+    <title>Document</title>
+    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="/css/Room.css">
 
-    video {
-      width: 100%;
-      height: 100%;
-      object-fit:cover;
-      border-bottom: 5px solid black;
-      border-top: 5px solid black;
-      border-left: 5px solid black;
-      border-right: 5px solid black;
-    }
-
-    @media screen and (max-width: 800px) {
-      #video-grid {
-        display: grid;
-        grid-template-columns: repeat(auto-fill, 100px);
-        grid-auto-rows: 100px;
-        padding-right: 5px;
-        padding-left: 5px;
-      }
-    }
-  </style>
 </head>
 
 <body>
-  <div id="video-grid"></div>
+    <div id="video-grid"></div>
 </body>
 
 </html>
