added bootstrap and images update

--- a/views/homePage.ejs
+++ b/views/homePage.ejs
@@ -18,7 +18,7 @@
 <body class="container-fluid" style="font-family: 'Grandstander', cursive;">
     <div class="row">
         <div class="col-md-4 center-image d-none d-md-block">
-            <img src="/Images/Banner.svg" alt="brandLogo">
+            <img src="/images/Banner.svg" alt="brandLogo">
         </div>
 
         <div class="col-xs-12 col-sm-12 col-md-8">
