--- a/views/room.ejs
+++ b/views/room.ejs
@@ -10,16 +10,24 @@
         const ROOM_ID = "<%= roomId %>"
     </script>
     <script defer src="https://cdnjs.cloudflare.com/ajax/libs/peerjs/1.3.1/peerjs.min.js"></script>
+
     <script src="/socket.io/socket.io.js" defer></script>
-    <script src="script.js" defer></script>
+    <script src="/js/script.js" defer></script>
     <title>Document</title>
+    <link href="css/bootstrap/bootstrap.css" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="/css/styles.css">
     <link rel="stylesheet" href="/css/Room.css">
 
 </head>
 
 <body>
-    <div id="video-grid"></div>
+    <div id="video-grid">
+    </div>
+    <!-- <br>
+    <br>
+    <div class="row">
+        <button id="endButton" class="btn btn-danger" onclick="endMeeting()">Click To close Meeting</button>
+    </div> -->
 </body>
 
 </html>
